# zdbg

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
build-win/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-win/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: arm64data.json  x86data.json
examples/: testio.c  testprog.c  testsignals.c  testthreads.c
examples/scripts/: assert-patch.zdbg  assert-smoke.zdbg  conditional-break.zdbg  io-smoke.zdbg  search-main.zdbg  smoke.zdbg  trace-main.zdbg
include/: zdbg.h  zdbg_actions.h  zdbg_arch.h  zdbg_arch_aarch64.h  zdbg_arch_x86_64.h  zdbg_bp.h  zdbg_cmd.h  zdbg_exception.h  zdbg_expr.h  zdbg_filter.h  zdbg_hwbp.h  zdbg_machine.h  zdbg_maps.h  zdbg_mem.h  zdbg_patch.h  zdbg_pe.h  zdbg_regfile.h  zdbg_regs.h  zdbg_signal.h  zdbg_stdio.h  zdbg_symbols.h  zdbg_target.h  zdbg_tinyasm.h  zdbg_tinydis.h
src/: actions.c  arch.c  arch_aarch64.c  arch_aarch64_asm.c  arch_aarch64_dis.c  arch_x86_64.c  bp.c  cmd.c  exception.c  expr.c  filter.c  hwbp.c  machine.c  main.c  maps.c  mem.c  patch.c  pe.c  regfile.c  regs.c  repl.c  signal.c  stdio.c  symbols.c  target.c  target_null.c  tinyasm.c  tinydis.c
src/os_linux/: maps_linux.c  symbols_elf.c  target_linux.c
src/os_windows/: target_windows.c
tests/: CMakeLists.txt  test_aarch64_asm.c  test_aarch64_dis.c  test_actions.c  test_arch.c  test_bp.c  test_check.c  test_cmd_script.c  test_exception.c  test_expr.c  test_expr_maps.c  test_expr_value.c  test_filter.c  test_hwbp.c  test_linux_aarch64_target.c  test_linux_bp.c  test_linux_hwbp.c  test_linux_signals.c  test_linux_symbols.c  test_linux_target.c  test_linux_threads.c  test_machine.c  test_maps.c  test_memio.c  test_patch.c  test_pe_file.c  test_regfile.c  test_search.c  test_signal.c  test_stdio.c  test_symbols.c  test_tinyasm.c  test_tinydis.c  test_windows_target.c
